# kursovaya_3

./: .gitignore  pyproject.toml
src/: funcs.py  main.py
tests/: test_funcs.py
